--- a/spons.html
+++ b/spons.html
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-
+<div style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><centre> <h2>Our top reasons why you should sponsor:</h2></centre></div>
 
   <ul class="tilesWrap">
     <li>
