--- a/events/netcricket.html
+++ b/events/netcricket.html
@@ -4,46 +4,33 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Paper Presentation</title>
+        <title>Sand Rover - SIT_TECH_KRITI</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-   -->
         <link
             href="https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap"
             rel="stylesheet"
-            />
+        />
         <link rel="stylesheet" href="../navbar.css" />
         <link rel="stylesheet" href="../event.css" />
-
         <link
             rel="stylesheet"
-            media="screen and (max-width:920px )"
+            media="screen and (max-width:920px)"
             href="../nav-responsive.css"
-            />
+        />
         <link rel="stylesheet" href="../footer.css" />
-
-        <!--link for css file-->
         <script
             src="https://kit.fontawesome.com/0b62b37b15.js"
-            crossorigin="anonymous"></script>
-        <!-- link for social media logo -->
-        <script
-            src="https://kit.fontawesome.com/0b62b37b15.js"
-            crossorigin="anonymous"></script>
-        <!-- <link rel="icon" href="../images/reg_ico.png"> -->
+            crossorigin="anonymous"
+        ></script>
         <link rel="stylesheet" href="../reg.css" />
-        <!-- <link rel="stylesheet" href="./event-name.css"> -->
         <link rel="stylesheet" href="./event-name.css" />
     </head>
     <body>
         <nav class="navbar">
             <input type="checkbox" id="active" />
             <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
-            <!--menu button-->
             <div class="wrapper">
-                <!--menu button content-->
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="#">Sponsors</a></li>
@@ -51,86 +38,78 @@
                     <li><a href="../reg.html">Register</a></li>
                 </ul>
             </div>
-
             <div class="nav-container">
-                <!--navbar content1-->
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="#">Sponsors</a></li>
                 </ul>
             </div>
-
             <div class="nav-container-2">
-                <!--Title-->
                 <a href="../index.html">
-                    <p>PRAJWALAN</p>
+                    <p>SIT_TECH_KRITI</p>
                 </a>
             </div>
-
             <div class="nav-container-3">
-                <!--navbar content2-->
-                <div class="nav-container-3">
-                    <ul>
-                        <li><a href="../event.html">Events</a></li>
-                        <li><a href="../reg.html">Register</a></li>
-                    </ul>
-                </div>
+                <ul>
+                    <li><a href="../event.html">Events</a></li>
+                    <li><a href="../reg.html">Register</a></li>
+                </ul>
             </div>
         </nav>
         <body>
             <div class="event-card">
                 <div class="event-left">
-                    <img src="../images/event-logos/netcricket.png" alt="" class="event-image" />
+                    <img src="../images/event-logos/sand-rover.jpg" alt="Sand Rover Event" class="event-image" />
                 </div>
-                <div class="event-right" >
-                    <h1>Net Cricket</h1>
+                <div class="event-right">
+                    <h1>Sand Rover Challenge</h1>
                     <p>
-                        It is an individual sports event in which participants must face the bowling of balling machine. Depends on registration fees they can participate for 1 over or 2 over. This event will organize at volleyball ground. This event will start from 11 o’ clock.
-
+                        The **Sand Rover Challenge** is an exciting hands-on event where teams compete to design and build their own mini rovers capable of navigating tough sand terrain. Participants will use innovation and engineering principles to create functional prototypes and race them through obstacles. Test your rover's durability, speed, and design in this thrilling competition!
                     </p>
-                    
-                <h2>Date of event</h2>
-                <p>20 & 21 Feb 2023</p>
-                <h2>Venue</h2>
-                <p>Government college of engineering, Amravati</p>
-                <h2>Entry Fee: Rs. 60 (1 Over)</h2>
-                <h2>Entry Fee: Rs. 100 (2 Over)</h2>
-
-                <div style="text-align: center;">
-                <a style="text-decoration: none; color: white;"
-                    href="https://surveyheart.com/form/63e880d036e5e053418cc653"
-                    target="_blank"><button>Register</button></a>
+                    <h2>Rules</h2>
+                    <p>
+                        <ol style="color:white">
+                            <li>Teams must construct a working sand rover using given materials.</li>
+                            <li>Each rover must complete the obstacle course within the stipulated time.</li>
+                            <li>Judging criteria include speed, stability, and innovative design.</li>
+                        </ol>
+                    </p>
+                    <p style="margin-top: 20px;">
+                        For More Details
+                        <a
+                            style="color: #ffbaff;"
+                            href="https://docs.google.com/document/d/1xEmT-x1F52BqatlntCYV_VTzUc_GoeZL/edit?usp=sharing&ouid=106789508280481670729&rtpof=true&sd=true"
+                            target="_blank"
+                            >Click Here</a
+                        >
+                    </p>
+                    <h2>Venue</h2>
+                    <p>SIT College, Outdoor Arena</p>
+                    <h2>Entry Fee: Rs. 150</h2>
+                    <a
+                        style="text-decoration: none; color: white;"
+                        href="https://surveyheart.com/form/63e880d036e5e053418cc653"
+                        target="_blank"
+                        ><button>Register</button></a
+                    >
                 </div>
-            </div>
             </div>
         </body>
         <footer class="footer">
             <div class="footer-container">
-                <!--Main container (main div)-->
                 <div class="footer-row">
                     <div class="footer-col">
-                        <!--Column 01-->
-                        <img src="../prajwalan.png" alt="fg" class="footer-logo"
-                            />
-                        <!-- Prajwalan logo -->
+                        <img src="../sit-tech-kriti-logo.png" alt="SIT Logo" class="footer-logo" />
                     </div>
-
                     <div class="footer-col">
-                        <!-- Column 02 -->
                         <h4>Address</h4>
-                        <!--Column heading  -->
-
-                        <p>Government College of Engineering</p>
-                        <p>Kathora Naka, Amravati</p>
-                        <p>Pin-444604</p>
-                        <p><a href="#" class="gcoea-website">www.gcoea.ac.in</a></p>
-                        <!-- Gcoea Website -->
+                        <p>SIT College, Sitamarhi</p>
+                        <p>Bihar, India</p>
+                        <p>Pin-843302</p>
+                        <p><a href="#" class="sit-website">www.sitamarhi.ac.in</a></p>
                     </div>
-
                     <div class="footer-col">
-                        <!-- Column 03  -->
                         <h4>Help</h4>
-                        <!-- Column heading -->
                         <ul>
                             <li><a href="#">FAQs</a></li>
                             <li><a href="#">Home</a></li>
@@ -138,12 +117,8 @@
                             <li><a href="#">Register</a></li>
                         </ul>
                     </div>
-
                     <div class="footer-col">
-                        <!-- Column 04 -->
-                        <h4>follow us</h4>
-                        <!--column heading  -->
-
+                        <h4>Follow Us</h4>
                         <div class="social-links">
                             <a href="#"><i class="fa-brands fa-facebook"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
