--- a/event.html
+++ b/event.html
@@ -46,7 +46,7 @@
       <!--navbar content1-->
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Sponsors</a></li>
+        <li><a href="spons.html">Sponsors</a></li>
       </ul>
     </div>
 
