--- a/event.html
+++ b/event.html
@@ -77,9 +77,8 @@
         <h2>01</h2>
         <h3>Sand Rover</h3>
         <p>
-          This event seems to revolve around designing and racing innovative, rugged vehicles capable of maneuvering
-          through challenging terrains. Participants can showcase their engineering skills and creativity in building
-          robust rovers.
+          The Sand Rover Challenge is an exhilarating event that brings out the innovator and engineer in every participant. This competition invites teams to design and build their own miniature rovers capable of tackling rugged sand terrains.
+
         </p>
         <a href="events/netcricket.html">
           <button>Read more</button>
@@ -89,8 +88,8 @@
         <h2>02</h2>
         <h3>E-gaming</h3>
         <p>
-          A virtual battle arena for gaming enthusiasts! This competition offers an adrenaline-filled experience where
-          participants test their strategy, reflexes, and teamwork in popular electronic games.
+          The E-Gaming Event at SIT_TECH_KRITI brings gaming enthusiasts together for an exciting showdown in popular games like Free Fire and PUBG. Participants will showcase their skills in action-packed battles and strategic gameplay. The event promises camaraderie, thrilling challenges, and attractive prizes for top performers, making it a must-attend celebration of gaming passion!
+
         </p>
         <a href="events/gamescom.html">
           <button>Read more</button>
