--- a/event.html
+++ b/event.html
@@ -77,7 +77,7 @@
         <h2>01</h2>
         <h3>Sand Rover</h3>
         <p>
-          The Sand Rover Challenge is an exhilarating event that brings out the innovator and engineer in every participant. This competition invites teams to design and build their own miniature rovers capable of tackling rugged sand terrains.
+          The Sand Rover Challenge is an exciting event where teams design and build miniature rovers to navigate rugged sand terrains. It tests engineering skills, creativity, and teamwork, with participants racing through obstacles to showcase their innovative designs.
 
         </p>
         <a href="events/netcricket.html">
@@ -88,7 +88,7 @@
         <h2>02</h2>
         <h3>E-gaming</h3>
         <p>
-          The E-Gaming Event at SIT_TECH_KRITI brings gaming enthusiasts together for an exciting showdown in popular games like Free Fire and PUBG. Participants will showcase their skills in action-packed battles and strategic gameplay. The event promises camaraderie, thrilling challenges, and attractive prizes for top performers, making it a must-attend celebration of gaming passion!
+          The E-Gaming Event at SIT_TECH_KRITI is a thrilling platform for gaming enthusiasts to showcase their skills. Players will compete in popular games like Free Fire and PUBG, battling through strategic challenges and action-packed matches to win exciting prizes!
 
         </p>
         <a href="events/gamescom.html">
@@ -96,24 +96,12 @@
         </a>
       </li>
 
-      <!-- <li>
-        <h2>13</h2>
-        <h3>HANDHELD E-SPORT</h3>
-        <p>
-          A virtual battle arena for gaming enthusiasts! This competition offers an adrenaline-filled experience where participants test their strategy, reflexes, and teamwork in popular electronic games.
-        </p>
-        <a href="events/e-sport.html">
-          <button>Read more</button>
-        </a>
-      </li> -->
-
-
       <li>
         <h2>03</h2>
         <h3>Bridzo-menia</h3>
         <p>
-          Possibly a thrilling card or strategy-based event that could test participants' cognitive abilities and
-          decision-making under pressure. It sounds like a mix of skill, logic, and fun!
+         The Bridzo-menia event challenges participants to design and construct miniature bridges using engineering principles. Teams will test their creations for strength, stability, and efficiency, showcasing innovation and teamwork in a thrilling competition of creativity and structural expertise!
+
         </p>
         <a href="events/Cosmo_clench.html">
           <button>Read more</button>
@@ -123,8 +111,8 @@
         <h2>04</h2>
         <h3>Robotics Exhibition</h3>
         <p>
-          A platform for tech-savvy innovators to demonstrate their cutting-edge robots. These creations might tackle
-          real-world problems or offer glimpses into futuristic technology.
+          The Robotics Exhibition at SIT_TECH_KRITI is a showcase of innovative robotic creations designed by talented teams. Participants will present their robots' functionality, creativity, and real-world applications. This event celebrates ingenuity, technological advancement, and the future of robotics!
+
         </p>
         <a href="events/cad-mania.html">
           <button>Read more</button>
@@ -132,10 +120,10 @@
       </li>
       <li>
         <h2>05</h2>
-        <h3>PPT</h3>
+        <h3>PPT Presentation</h3>
         <p>
-          A think-tank challenge where participants brainstorm and pitch groundbreaking solutions for current
-          challenges. It fosters creativity, critical thinking, and collaboration.
+        The PPT Presentation event at SIT_TECH_KRITI is a platform for participants to showcase their ideas, research, and creativity through engaging presentations. Teams will be judged on content, clarity, and delivery, celebrating innovation and academic excellence!
+
         </p>
         <a href="events/paper-presentation.html">
           <button>Read more</button>
@@ -145,8 +133,7 @@
         <h2>06</h2>
         <h3>Tech Quiz</h3>
         <p>
-          This event sharpens intellect as tech enthusiasts compete to answer intriguing questions about science,
-          technology, and innovations.</p>
+          The Tech Quiz at SIT_TECH_KRITI is a competitive event that tests participants' knowledge of technology, science, and innovation. With thought-provoking questions across various domains, this quiz challenges intellect, encourages learning, and celebrates technological curiosity!</p>
         <a href="events/paint-ball.html">
           <button>Read more</button>
         </a>
@@ -155,10 +142,8 @@
         <h2>07</h2>
         <h3>Art Gallery</h3>
         <p>
-          This event is a showcase of creativity and talent, where participants display their artistic masterpieces.
-          It's an inspiring space filled with diverse artworks, ranging from paintings and sketches to mixed media and
-          digital art. Visitors can admire the creativity and personal stories embedded within each piece, making it a
-          celebration of individual expression.</p>
+         The Art Gallery at SIT_TECH_KRITI is a visual celebration of creativity and artistic expression. Participants will showcase stunning artworks, including paintings, sketches, and designs, highlighting their talent and imagination. This event fosters appreciation for the arts in an inspiring atmosphere!
+        </p>
         <a href="events/death-rush.html">
           <button>Read more</button>
         </a>
@@ -167,10 +152,8 @@
         <h2>08</h2>
         <h3>WALL PAINTING</h3>
         <p>
-          A dynamic and collaborative event where teams work together to create striking murals or designs on large
-          walls. This activity often has a specific theme, encouraging participants to think creatively and translate
-          their ideas onto an expansive canvas. It's a vibrant, hands-on event that transforms blank spaces into
-          visually stunning pieces of art.
+          The Wall Painting event at SIT_TECH_KRITI is a vibrant platform for artists to unleash their creativity on large canvases. Participants will craft stunning murals that reflect innovation, culture, and imagination, adding artistic brilliance to the fest's ambiance!
+
         </p>
         <a href="event-name.html">
           <button>Read more</button>
@@ -180,8 +163,8 @@
         <h2>09</h2>
         <h3>Logo Making</h3>
         <p>
-          A design-centric competition to craft a visually striking and meaningful logo, blending aesthetics with
-          symbolism.
+         The Logo Making event at SIT_TECH_KRITI is a creative challenge for participants to design unique and impactful logos. It tests artistic skills, originality, and innovation, providing a platform to showcase design expertise and creativity!
+
         </p>
         <a href="events/innovathon.html">
           <button>Read more</button>
@@ -191,8 +174,8 @@
         <h2>10</h2>
         <h3>Yoga Competition</h3>
         <p>
-          Combining strength, flexibility, and mental focus, this competition highlights the grace and discipline of
-          yogic practices.
+        The Yoga Competition at SIT_TECH_KRITI is a celebration of balance, strength, and flexibility. Participants will showcase their yoga skills through challenging poses and sequences. This event promotes wellness, discipline, and the beauty of mindful practice in a vibrant atmosphere!
+
         </p>
         <a href="events/overkill.html">
           <button>Read more</button>
@@ -202,8 +185,7 @@
         <h2>11</h2>
         <h3>Poster Making</h3>
         <p>
-          Participants creatively portray powerful messages or ideas visually, blending artistic skill and impactful
-          storytelling.
+         The Poster Making event at SIT_TECH_KRITI is a creative platform for participants to showcase their artistic flair. Teams will design impactful posters reflecting themes of innovation, culture, and imagination, celebrating the fusion of art and ideas!
         </p>
         <a href="events/Hack-ccelarate.html">
           <button>Read more</button>
@@ -213,8 +195,8 @@
         <h2>12</h2>
         <h3>Essay Competition</h3>
         <p>
-          An intellectual event where writers articulate their thoughts and perspectives eloquently on a given topic.
-        </p>
+          The Essay Competition at SIT_TECH_KRITI is a platform for participants to express their ideas and perspectives through compelling writing. Participants will craft essays on thought-provoking topics, showcasing creativity, analytical skills, and the art of effective communication
+      </p>
         <a href="events/gamescom.html">
           <button>Read more</button>
         </a>
@@ -223,8 +205,8 @@
         <h2>13</h2>
         <h3>Debate Competition</h3>
         <p>
-          A dynamic battlefield of words, where participants present arguments, counterpoints, and engage in passionate
-          discussions on thought-provoking topics.
+         The Debate Competition at SIT_TECH_KRITI is an intellectual showdown where participants engage in thought-provoking discussions. Teams will articulate their views on various topics, showcasing logical reasoning, communication skills, and persuasion. This event celebrates the art of impactful dialogue!
+
         </p>
         <a href="events/e-sport.html">
           <button>Read more</button>
@@ -234,15 +216,8 @@
         <h2>14</h2>
         <h3>Coding Competition</h3>
         <p>
-          This exciting competition will bring together teams of students from
-          all over the campus for a fun-filled and fast-paced day of cricket.
-          Featuring custom-designed box cricket sets, this event promises to
-          be a unique and entertaining take on the classic game. With rules
-          and regulations designed to promote fair play and competition, you
-          can expect a day filled with intense matches, nail-biting finishes,
-          and plenty of friendly competition. So gather your friends, form a
-          team, and sign up now for a chance to showcase your cricket skills
-          and compete for top honors.
+         The Coding Competition at SIT_TECH_KRITI is a platform for tech enthusiasts to showcase their programming skills. Participants will solve challenging problems and develop innovative solutions, demonstrating creativity, logic, and expertise in a high-energy, competitive environment!
+
         </p>
         <a href="events/box-cricket.html">
           <button>Read more</button>
@@ -252,13 +227,8 @@
         <h2>15</h2>
         <h3>Fitness Competition</h3>
         <p>
-          Wall Painting is an event in which they will be painting the
-          departmental walls of our GCOEA campus. This is a competition
-          organized for teams and individuals. They have to present for
-          competition at 12p.m. and specific time slot and hall will be given
-          for painting. The participants have to complete their paintings in
-          the given slot of time. Participants will have their artistic
-          freedom and scope for creativity.
+         The Fitness Competition at SIT_TECH_KRITI is a platform to showcase physical strength, endurance, and agility. Participants will face exciting challenges that test their fitness levels, promoting a healthy lifestyle while celebrating determination, discipline, and the spirit of sportsmanship!
+
         </p>
         <a href="event-name.html">
           <button>Read more</button>
@@ -268,14 +238,8 @@
         <h2>16</h2>
         <h3>Ideathon</h3>
         <p>
-          Model expo event is basically an EXHIBITION of models. It is a
-          competition between the students within the group A,B,C,D. In this
-          event, you have to present the model according to your interest.
-          This competition will help to enrich knowledge and to explore
-          various oppurtinities. In this event B Tech, M Tech, Polytechnic
-          students from any branch and from any college can participate. The
-          best model will be selected on the basis of their innovative ideas,
-          benefits to the society.
+          The Ideathon at SIT_TECH_KRITI is a platform for creative minds to brainstorm and pitch innovative ideas. Participants will collaborate to solve real-world problems, showcasing their creativity, analytical thinking, and teamwork in a dynamic and inspiring environment!
+
         </p>
         <a href="event-name.html">
           <button>Read more</button>
@@ -285,9 +249,8 @@
         <h2>17</h2>
         <h3>Town Planning</h3>
         <p>
-          The Town Planning event at SIT_TECH_KRITI is a platform for aspiring urban designers and planners to envision
-          smarter, more sustainable cities. Participants will tackle real-world challenges, crafting innovative
-          solutions that balance infrastructure, environmental sustainability, and efficient land use.
+          The Town Planning event at SIT_TECH_KRITI is a platform for participants to design innovative urban layouts. Teams will showcase their creativity and problem-solving skills while addressing real-world challenges, highlighting sustainable and efficient solutions for modern cities!
+
 
         </p>
         <a href="events/ev-exhibition.html">
