--- a/reg.html
+++ b/reg.html
@@ -64,7 +64,7 @@
   <div class="container">
     <h1 class="container__form-title">REGISTRATION</h1>
     <form action="#">
-  <div>Welcome to the registration page for SIT_TECH_KRITI! Be a part of an exciting journey filled with creativity, innovation, and competition. Sign up today to secure your place in thrilling events like gaming battles, robotics showcases, and artistic challenges. Whether you’re a tech enthusiast, an artist, or a problem-solver, there's something for everyone. Don’t miss the chance to showcase your skills, win amazing prizes, and create lasting memories. Register now and take the first step toward an unforgettable experience!</div>
+  <div style="color:white;">Welcome to the registration page for SIT_TECH_KRITI! Be a part of an exciting journey filled with creativity, innovation, and competition. Sign up today to secure your place in thrilling events like gaming battles, robotics showcases, and artistic challenges. Whether you’re a tech enthusiast, an artist, or a problem-solver, there's something for everyone. Don’t miss the chance to showcase your skills, win amazing prizes, and create lasting memories. Register now and take the first step toward an unforgettable experience!</div>
       
       <!-- <div class="container__main-user-info">
         // the elemnts in form 
