--- a/reg.html
+++ b/reg.html
@@ -40,7 +40,7 @@
       <!--navbar content1-->
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Sponsors</a></li>
+        <li><a href="spons.html">Sponsors</a></li>
       </ul>
     </div>
 
