--- a/spons.html
+++ b/spons.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <!--menu button content-->
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="event.html">Events</a></li>
         <li><a href="reg.html">Register</a></li>
       </ul>
@@ -39,7 +39,7 @@
     <div class="nav-container">
       <!--navbar content1-->
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="spons.html">Sponsors</a></li>
       </ul>
     </div>
