--- a/spons.html
+++ b/spons.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <!--menu button content-->
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="event.html">Events</a></li>
         <li><a href="reg.html">Register</a></li>
       </ul>
@@ -39,7 +39,7 @@
     <div class="nav-container">
       <!--navbar content1-->
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="spons.html">Sponsors</a></li>
       </ul>
     </div>
@@ -68,7 +68,7 @@
 
       <img src="./images/prajwalan.png" height="290" class="logo" />
       <p>
-        <i>WELCOME TO <b>SIT_TECH_KRITI </b> 2022-2023 ORGANISED BY GCOEA</i>
+        <i>WELCOME TO <b>SIT_TECH_KRITI </b>ORGANISED BY SIT SITAMARHI</i>
         <br />
       </p>
       <div>
@@ -79,10 +79,26 @@
     </div>
   </div>
 
+  <div class="company-showcase">
+    <div class="company-card">
+      <img src="./images/AWT_LOGO.png" alt="Company 1 Logo" class="company-photo">
+      <a href="https://www.androwebstech.com/"style="text-decoration-line: none;" ><h3 class="company-name"> AndrowebsTech</h3></a>
+    </div>
+    <div class="company-card">
+      <img src="./images/gym.jpg" alt="Company 2 Logo" class="company-photo">
+      <a href="#" style="text-decoration-line: none;" ><h3 class="company-name">PRO ULTIMATE GYM XPRESS</h3></a>
+    </div>
+    <div class="company-card">
+      <img src="./images/company3.jpg" alt="Company 3 Logo" class="company-photo">
+      <a href="#" style="text-decoration-line: none;" ><h3 class="company-name">Sit SITAMARHI</h3></a>
+    
+    </div>
+  </div>
+
 <div style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><centre> <h2>Our top reasons why you should sponsor:</h2></centre></div>
 
   <ul class="tilesWrap">
-    <li>
+    <li >
       <h2>01</h2>
       <h3>Raise your brand profile</h3>
       <p>
