--- a/spons.html
+++ b/spons.html
@@ -170,6 +170,7 @@
         <div class="footer-col">
           <!--Column 01-->
           <img src="./images/prajwalan.png" alt="fg" class="footer-logo" />
+          <a href="https://www.linkedin.com/in/aman-kumar-184814274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Desig by AMAN KUMAR</a>
           <!-- Prajwalan logo -->
         </div>
 
