--- a/spons.html
+++ b/spons.html
@@ -169,8 +169,8 @@
       <div class="footer-row">
         <div class="footer-col">
           <!--Column 01-->
-          <img src="./images/prajwalan.png" alt="fg" class="footer-logo" />
-          <a href="https://www.linkedin.com/in/aman-kumar-184814274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Desig by AMAN KUMAR</a>
+          <img src="./images/prajwalan.png" alt="fg" class="footer-logo" /><br>
+          <a href="https://www.linkedin.com/in/aman-kumar-184814274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" style="text-decoration-line: none;color: white;" >Desig by AMAN KUMAR</a>
           <!-- Prajwalan logo -->
         </div>
 
