--- a/spons.html
+++ b/spons.html
@@ -95,7 +95,7 @@
     </div>
   </div>
 
-<div style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><centre> <h2>Our top reasons why you should sponsor:</h2></centre></div>
+<div style="color: white;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"> <h2 style="text-align: center;">Our top reasons why you should sponsor:</h2></div>
 
   <ul class="tilesWrap">
     <li >
