--- a/spons.html
+++ b/spons.html
@@ -79,8 +79,8 @@
     </div>
   </div>
 
+    <div style="color: white;font-family:Serif;"> <h2 style="text-align: center;">Our Sponsors:</h2></div>
   <div class="company-showcase">
-    <div style="color: white;font-family:Serif;"> <h2 style="text-align: center;">Our top reasons why you should sponsor:</h2></div>
 
     <div class="company-card">
       <img src="./images/AWT_LOGO.png" alt="Company 1 Logo" class="company-photo">
