--- a/event.html
+++ b/event.html
@@ -125,7 +125,7 @@
         The PPT Presentation event at SIT_TECH_KRITI is a platform for participants to showcase their ideas, research, and creativity through engaging presentations. Teams will be judged on content, clarity, and delivery, celebrating innovation and academic excellence!
 
         </p>
-        <a href="events/paper-presentation.html">
+        <a href="events/ppt.html">
           <button>Read more</button>
         </a>
       </li>
