--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
           <div class="footer-col">
             <!--Column 01-->
             <img src="./images/prajwalan.png" alt="fg" class="footer-logo" />
-            <!-- Prajwalan logo -->
+            <!-- Prajwalan logo --><br>
+          <a href="https://www.linkedin.com/in/aman-kumar-184814274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" style="text-decoration: none;color: white;">Design BY AMAN KUMAR</a>
+          
           </div>
 
           <div class="footer-col">
