--- a/spons.html
+++ b/spons.html
@@ -91,7 +91,7 @@
       <a href="https://www.instagram.com/pugx_sitamarhi?igsh=aTJpODFzbW83Mnpr" style="text-decoration-line: none;" ><h3 class="company-name">PRO ULTIMATE GYM XPRESS</h3></a>
     </div>
     <div class="company-card">
-      <img src="./images/gym.jpg" alt="Company 3 Logo" class="company-photo">
+      <img src="./images/bizdoor.jpg" alt="Company 3 Logo" class="company-photo">
       <a href="#" style="text-decoration-line: none;" ><h3 class="company-name">BIZDOOR CORPORATE</h3></a>
     
     </div>
