--- a/spons.html
+++ b/spons.html
@@ -46,7 +46,7 @@
 
     <div class="nav-container-2">
       <!--Title-->
-      <a href="#">
+      <a href="index.html">
         <p>SIT_TECH_KRITI</p>
       </a>
     </div>
