--- a/event.html
+++ b/event.html
@@ -80,7 +80,7 @@
           The Sand Rover Challenge is an exciting event where teams design and build miniature rovers to navigate rugged sand terrains. It tests engineering skills, creativity, and teamwork, with participants racing through obstacles to showcase their innovative designs.
 
         </p>
-        <a href="events/netcricket.html">
+        <a href="events/sand.html">
           <button>Read more</button>
         </a>
       </li>
