--- a/events/sand.html
+++ b/events/sand.html
@@ -68,11 +68,11 @@
         </div>
       </nav>
     <body>
-  <div class="event-card">
-    <div class="event-left">
-      <img src="../images/event-logos/Sand-Rover-Challenge.jpg" alt="Sand Rover Challenge" class="event-image" />
-    </div>
-    <div class="event-right">
+            <div class="event-card">
+            <div class="event-left">
+                <img src="../images/event-logos/Autocad-Master.jpg" alt="" class="event-image" />
+            </div>
+            <div class="event-right">
       <h1>Sand Rover Challenge</h1>
       <p>
         Participants will build a wireless robot capable of carrying <b>500 grams</b> of coarse aggregate across an
