--- a/events/bridge.html
+++ b/events/bridge.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cosmo Clench</title>
+        <title>BRIDGE-O-MANIA</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -81,53 +81,64 @@
             <div class="event-card">
                 <div class="event-left">
                     <img src="../images/event-logos/Cosmo_clench.jpg" alt="" class="event-image" />
-                </div>
-                <div class="event-right" >
-                    <h1>Cosmo Clench</h1>
-                    <p>
-                        The aim of COSMO CLENCH is to find best minds for industry who are able to learn and apply their robotic knowledge in front of others. <br><br>
-                        1.   Participants will have the opportunity to showcase their innovative bot which is able to travel over the entire areena and compete with other team bots for prizes in front of a panel. <br><br>
-                        2.  The COSMO CLENCH  is open  to all individuals with an  interest in bot development, regardless of  their experience  level.<br>
-
-                    </p>
-                    <!-- <p>In Paintball fun war game there will be some amount of
-                        entry fees for playes and it will be organise on both
-                        days of 'PRAJWALAN' and as it is a type of fun game so
-                        there will not be any prize for the winners it will be
-                        organize just for a fun purpose.</p> -->
-                    <!-- <h2>Rules</h2>
-                    <p><ol style="color:white">
-                            <li>Each participant will be given 20 balls. </li>
-                            <li>Each participant will be given a 20-minute slot.</li>
-                            <li>If a participant wants an extra ball, then
-                                he/she will have to pay extra charges.</li>
-                            <li>The charge of extra one ball is 10 rs. i.e.
-                                10rs/ball.</li>
-
-                        </ol>
-                    </p> -->
-                    <!-- <h2>Terms and Conditions</h2>
-                    <p>If there is any kind of damage to any equipment, then
-                        the participant will be responsible for it and will
-                        compensate for it.
-                    </p> -->
-                    <p style="margin-top: 20px;">For More Details <a
-                            style="color: #ffbaff;"
-                            href="https://docs.google.com/document/d/1d5_T9DrIW4KnihDfn_eZ-35SqBr9PjuQ/edit?usp=sharing&ouid=106789508280481670729&rtpof=true&sd=true"
-                            target="_blank">Click Here</a></p>
-                    <h2>Date of event</h2>
-                    <p>20 & 21 Feb 2023</p>
-                    <h2>Venue</h2>
-                    <p>CAD LAB and COMPUTER LAB located on the 1st floor of the mechanical department of GCOEA.</p>
-                    <h2>Entry Fee: </h2>
-                    <p>50 RS for each participant.</p>
-                    <p>(If one team contains 4 participants then the entry fees will be 200 rs rupees)</p>
-                    <a style="text-decoration: none; color: white;"
-                        href="#"
-                        target="_blank"><button>Register</button></a>
-                </div>
             </div>
-        </body>
+    <div class="event-right">
+      <h1>Bridge Making Competition</h1>
+      <p>
+        Participants will build a bridge using <b>wooden ice cream sticks</b> and <b>Fevicol</b>. The competition aims
+        to test the strength and efficiency of the bridge design based on the <b>load-to-weight ratio</b>.
+      </p>
+
+      <h2>Rules</h2>
+      <ul style="color: white;">
+        <li><b>Team Size:</b> Maximum of 4 members.</li>
+        <li><b>Materials Provided:</b>
+          <ul style="color: white;">
+            <li>- 100 wooden ice cream sticks</li>
+            <li>- Fevicol</li>
+          </ul>
+        </li>
+        <li><b>Modification Allowed:</b> Sticks may be cut or altered as needed.</li>
+        <li><b>Bridge Dimensions:</b>
+          <ul style="color: white;">
+            <li>- <b>Length:</b> 48–56 cm</li>
+            <li>- <b>Width:</b> 12–16 cm</li>
+            <li>- <b>Height:</b> 12–16 cm</li>
+          </ul>
+        </li>
+        <li><b>Time Limit:</b> 2 hours and 30 minutes.</li>
+      </ul>
+
+      <h2>Testing Criteria</h2>
+      <ul style="color: white;">
+        <li>The bridge will be placed over an arena with two wooden columns representing landmasses.</li>
+        <li>Bridges will be evaluated based on the <b>highest load-to-weight ratio</b>.</li>
+        <li>Prizes will be awarded to <b>first, second, and third place</b> winners.</li>
+      </ul>
+
+      <h2>Additional Notes</h2>
+      <ul style="color: white;">
+        <li>Each team must designate <b>one group leader</b> responsible for coordination.</li>
+        <li>Names on certificates will match registration form entries.</li>
+        <li>All required materials will be provided <b>on the spot</b>.</li>
+      </ul>
+
+      <p style="margin-top: 20px;">For More Details Contact us</p>
+      <ul style="color: white;">
+        <li>AMAN KUMAR (9934254930)</li>
+        <li>Divayanshu Kumar</li>
+        <li>Sarves Suman</li>
+      </ul>
+
+      <h2>Date of Event</h2>
+      <p>25 Apr 2025 (11:00 AM - 1:30 PM)</p>
+      <h2>Venue</h2>
+      <p>Engineering Workshop</p>
+      <h2>Entry Fee: Rs. 50</h2>
+      <a style="text-decoration: none; color: white;" href="../reg.html" target="_blank"><button>Register</button></a>
+    </div>
+  </div>
+</body>
         <footer class="footer">
             <div class="footer-container">
                 <!--Main container (main div)-->
