--- a/event.html
+++ b/event.html
@@ -103,7 +103,7 @@
          The Bridzo-menia event challenges participants to design and construct miniature bridges using engineering principles. Teams will test their creations for strength, stability, and efficiency, showcasing innovation and teamwork in a thrilling competition of creativity and structural expertise!
 
         </p>
-        <a href="events/Cosmo_clench.html">
+        <a href="events/bridge.html">
           <button>Read more</button>
         </a>
       </li>
