--- a/event.html
+++ b/event.html
@@ -91,7 +91,7 @@
           The E-Gaming Event at SIT_TECH_KRITI is a thrilling platform for gaming enthusiasts to showcase their skills. Players will compete in popular games like Free Fire and PUBG, battling through strategic challenges and action-packed matches to win exciting prizes!
 
         </p>
-        <a href="events/gamescom.html">
+        <a href="events/bridge.html">
           <button>Read more</button>
         </a>
       </li>
