--- a/reg.html
+++ b/reg.html
@@ -17,7 +17,7 @@
   <script src="https://kit.fontawesome.com/0b62b37b15.js" crossorigin="anonymous"></script>
   <!-- link for social media logo -->
   <script src="https://kit.fontawesome.com/0b62b37b15.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="../images/reg_ico.png">
+  <link rel="icon" href="../images/prajwalan.png">
   <link rel="stylesheet" href="./reg.css">
 </head>
 
