--- a/events/poster.html
+++ b/events/poster.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVENTS</title>
+    <title>POSTER MAKING</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -83,41 +83,65 @@
       <div class="event-card">
         <div class="event-left">
           <img src="../images/event-logos/hack-accelerate.png" alt="" class="event-image" />
-        </div>
-        <div class="event-right">
-          <h1>Hack-ccelarate</h1>
-          <p>
-            A coding competition is an event that brings together computer
-            science students and enthusiasts to showcase their coding skills and
-            compete with each other. Participants compete by solving programming
-            challenges and completing coding tasks within a given time frame.
-            The competition typically involves multiple rounds of coding
-            challenges, each with increasing difficulty levels, and the
-            participants are usually required to write code in a specific
-            programming language.
-          </p>
-          <h2>Rules</h2>
-          <p>
-            There will be a time frame in which you need to complete the coding
-            question. You can choose any programming language of your choice
-          </p>
-          <p style="margin-top: 20px;">For More Details <a
-            style="color: #ffbaff;"
-            href="https://docs.google.com/document/d/1OmoC6YlRaz-88SmDejFLodQSD98-yAoDP-I9RPedSVs/edit?usp=sharing"
-            target="_blank">Click Here</a></p>
-          <h2>Date of event</h2>
-          <p>20 & 21 Feb 2023</p>
-          <h2>Venue</h2>
-          <p>Government college of engineering, Amravati</p>
-          <h2>Entry Fee: Rs. 70/person</h2>
-          <div style="text-align: center;">
-            <a style="text-decoration: none; color: white;"
-                href="https://forms.gle/32mwp1KVkC5mo8q18"
-                target="_blank"><button>Register</button></a>
-            </div>
-        </div>
-      </div>
-    </body>
+  </div>
+    <div class="event-right">
+      <h1>Poster Making Competition</h1>
+      <p>
+        A solo digital poster-making competition where participants have <b>1.5 hours</b> to create a poster based on a
+        topic assigned at the start of the event.
+      </p>
+
+      <h2>Rules</h2>
+      <ul style="color: white;">
+        <li><b>Individual participation only</b> (no group entries).</li>
+        <li>Posters must be created digitally using <b>Canva or Adobe Express</b>.</li>
+        <li><b>Pre-made templates are prohibited</b>; all designs must be original.</li>
+        <li>Posters must clearly and effectively represent the assigned theme.</li>
+        <li><b>Plagiarism or use of copyrighted material results in disqualification.</b></li>
+        <li>Participants must use their own <b>laptop or tablet</b> with required software installed.</li>
+      </ul>
+
+      <h2>Submission Guidelines</h2>
+      <ul style="color: white;">
+        <li>Posters must be saved in <b>JPEG, PNG, or PDF format</b>.</li>
+        <li><b>File naming convention:</b> First Name + Registration Number (e.g., RANJAN22XXXXXXX14).</li>
+        <li>Late submissions <b>will not be accepted</b>.</li>
+      </ul>
+
+      <h2>Judging Criteria</h2>
+      <ul style="color: white;">
+        <li><b>Relevance to the Topic</b> – How well the poster aligns with the assigned theme.</li>
+        <li><b>Creativity & Originality</b> – Unique ideas and artistic execution.</li>
+        <li><b>Visual Appeal</b> – Effective use of color, layout, and design elements.</li>
+        <li><b>Clarity & Presentation</b> – Neatness and clarity of the design.</li>
+      </ul>
+
+      <h2>General Rules</h2>
+      <ul style="color: white;">
+        <li>Participants must carry <b>valid college ID cards</b>.</li>
+        <li><b>Internet access</b> will be provided if required.</li>
+        <li><b>Unfair means</b> will lead to disqualification.</li>
+        <li><b>Judges' decisions</b> will be final and binding.</li>
+      </ul>
+
+      <h2>Entry Fee</h2>
+      <p>No entry fee mentioned.</p>
+
+      <h2>Contact Information</h2>
+      <ul style="color: white;">
+        <li><b>Arnav Kushansh</b> – 6202088378</li>
+        <li><b>Aditya Anand</b> – 7545823959</li>
+        <li><b>Adarsh Raj</b> – 6209686012</li>
+      </ul>
+
+      <h2>Date of Event</h2>
+      <p>26 Apr 2025 (2:00 PM - 3:30 PM)</p>
+      <h2>Venue</h2>
+      <p>Computer Lab</p>
+      <a style="text-decoration: none; color: white;" href="../reg.html" target="_blank"><button>Register</button></a>
+    </div>
+  </div>
+</body>
     <footer class="footer">
       <div class="footer-container">
         <!--Main container (main div)-->
