--- a/event.html
+++ b/event.html
@@ -187,7 +187,7 @@
         <p>
          The Poster Making event at SIT_TECH_KRITI is a creative platform for participants to showcase their artistic flair. Teams will design impactful posters reflecting themes of innovation, culture, and imagination, celebrating the fusion of art and ideas!
         </p>
-        <a href="events/Hack-ccelarate.html">
+        <a href="events/poster.html">
           <button>Read more</button>
         </a>
       </li>
