--- a/event.html
+++ b/event.html
@@ -253,7 +253,7 @@
 
 
         </p>
-        <a href="events/ev-exhibition.html">
+        <a href="events/town.html">
           <button>Read more</button>
         </a>
       </li>
