--- a/event.html
+++ b/event.html
@@ -268,7 +268,9 @@
       <div class="footer-row">
         <div class="footer-col">
           <!--Column 01-->
-          <img src="./images/prajwalan.png" alt="fg" class="footer-logo" />
+          <img src="../images/prajwalan.png" alt="fg" class="footer-logo" />
+          <br>
+          <a href="https://www.linkedin.com/in/aman-kumar-184814274?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" style="text-decoration: none;color: white;">Design BY AMAN KUMAR</a>
           <!-- Prajwalan logo -->
         </div>
 
