--- a/event.html
+++ b/event.html
@@ -241,7 +241,7 @@
           The Ideathon at SIT_TECH_KRITI is a platform for creative minds to brainstorm and pitch innovative ideas. Participants will collaborate to solve real-world problems, showcasing their creativity, analytical thinking, and teamwork in a dynamic and inspiring environment!
 
         </p>
-        <a href="event-name.html">
+        <a href="events/idea.html">
           <button>Read more</button>
         </a>
       </li>
