--- a/event.html
+++ b/event.html
@@ -219,7 +219,7 @@
          The Coding Competition at SIT_TECH_KRITI is a platform for tech enthusiasts to showcase their programming skills. Participants will solve challenging problems and develop innovative solutions, demonstrating creativity, logic, and expertise in a high-energy, competitive environment!
 
         </p>
-        <a href="events/box-cricket.html">
+        <a href="events/code.html">
           <button>Read more</button>
         </a>
       </li>
