--- a/event.html
+++ b/event.html
@@ -144,7 +144,7 @@
         <p>
          The Art Gallery at SIT_TECH_KRITI is a visual celebration of creativity and artistic expression. Participants will showcase stunning artworks, including paintings, sketches, and designs, highlighting their talent and imagination. This event fosters appreciation for the arts in an inspiring atmosphere!
         </p>
-        <a href="events/death-rush.html">
+        <a href="events/art.html">
           <button>Read more</button>
         </a>
       </li>
