--- a/event.html
+++ b/event.html
@@ -177,7 +177,7 @@
         The Yoga Competition at SIT_TECH_KRITI is a celebration of balance, strength, and flexibility. Participants will showcase their yoga skills through challenging poses and sequences. This event promotes wellness, discipline, and the beauty of mindful practice in a vibrant atmosphere!
 
         </p>
-        <a href="events/overkill.html">
+        <a href="events/yoga.html">
           <button>Read more</button>
         </a>
       </li>
@@ -197,7 +197,7 @@
         <p>
           The Essay Competition at SIT_TECH_KRITI is a platform for participants to express their ideas and perspectives through compelling writing. Participants will craft essays on thought-provoking topics, showcasing creativity, analytical skills, and the art of effective communication
       </p>
-        <a href="events/gamescom.html">
+        <a href="events/essay.html">
           <button>Read more</button>
         </a>
       </li>
