--- a/event.html
+++ b/event.html
@@ -98,7 +98,7 @@
 
       <li>
         <h2>03</h2>
-        <h3>Bridzo-menia</h3>
+        <h3>Bridge-o-mania</h3>
         <p>
          The Bridzo-menia event challenges participants to design and construct miniature bridges using engineering principles. Teams will test their creations for strength, stability, and efficiency, showcasing innovation and teamwork in a thrilling competition of creativity and structural expertise!
 
