--- a/event.html
+++ b/event.html
@@ -208,7 +208,7 @@
          The Debate Competition at SIT_TECH_KRITI is an intellectual showdown where participants engage in thought-provoking discussions. Teams will articulate their views on various topics, showcasing logical reasoning, communication skills, and persuasion. This event celebrates the art of impactful dialogue!
 
         </p>
-        <a href="events/e-sport.html">
+        <a href="events/debate.html">
           <button>Read more</button>
         </a>
       </li>
