--- a/events/art.html
+++ b/events/art.html
@@ -72,7 +72,21 @@
         <div class="event-left">
           <img src="../images/event-logos/hack-accelerate.png" alt="" class="event-image" />
   </div>
-
+<p style="margin-top: 20px;">For More Details Contact us </p>
+                    <ul style="color: white;">
+                        <li>AMAN KUMAR (9934254930)</li>
+                        <li>Divayanshu Kumar</li>
+                        <li>Sarves suman</li>
+                    </ul>
+               
+                <h2>Date of event</h2>
+                <p>24  Apr 2025 (10:00AM-12:00PM)</p>
+                <h2>Venue</h2>
+                <p>Seminar Hall 2</p>
+                <h2>Entry Fee: Rs. 50</h2>
+                <a style="text-decoration: none; color: white;"
+                    href="../reg.html"
+                    target="_blank"><button>Register</button></a>
 
 
 
