--- a/event.html
+++ b/event.html
@@ -230,7 +230,7 @@
          The Fitness Competition at SIT_TECH_KRITI is a platform to showcase physical strength, endurance, and agility. Participants will face exciting challenges that test their fitness levels, promoting a healthy lifestyle while celebrating determination, discipline, and the spirit of sportsmanship!
 
         </p>
-        <a href="event-name.html">
+        <a href="fit.html">
           <button>Read more</button>
         </a>
       </li>
