--- a/events/fit.html
+++ b/events/fit.html
@@ -151,7 +151,18 @@
         <li>Any trip or miss will <b>stop the count</b> for that attempt.</li>
         <li>Participants <b>can restart</b> if time remains.</li>
       </ul>
-
+<p style="margin-top: 20px;">For More Details Contact us </p>
+                    <ul style="color: white;">
+                        <li>Navneet Kumar(6207633490)</li>
+                        <li>Abhay Sharma</li>
+                        <li>Raushan Kumar</li>
+                    </ul>
+               
+                <h2>Date of event</h2>
+                <p>21  Apr 2025 (04:00PM-06:00PM)</p>
+                <h2>Venue</h2>
+                <p>Academic Building</p>
+                <h2>Entry Fee: Rs. 50</h2>
       <a style="text-decoration: none; color: white;" href="../reg.html" target="_blank"><button>Register</button></a>
     </div>
   </div>
