--- a/event.html
+++ b/event.html
@@ -134,7 +134,7 @@
         <h3>Tech Quiz</h3>
         <p>
           The Tech Quiz at SIT_TECH_KRITI is a competitive event that tests participants' knowledge of technology, science, and innovation. With thought-provoking questions across various domains, this quiz challenges intellect, encourages learning, and celebrates technological curiosity!</p>
-        <a href="events/paint-ball.html">
+        <a href="events/tech.html">
           <button>Read more</button>
         </a>
       </li>
