--- a/event.html
+++ b/event.html
@@ -114,7 +114,7 @@
           The Robotics Exhibition at SIT_TECH_KRITI is a showcase of innovative robotic creations designed by talented teams. Participants will present their robots' functionality, creativity, and real-world applications. This event celebrates ingenuity, technological advancement, and the future of robotics!
 
         </p>
-        <a href="events/cad-mania.html">
+        <a href="events/robo.html">
           <button>Read more</button>
         </a>
       </li>
