--- a/events/sand.html
+++ b/events/sand.html
@@ -130,16 +130,16 @@
 
       <p style="margin-top: 20px;">For More Details Contact us</p>
       <ul style="color: white;">
-        <li>AMAN KUMAR (9934254930)</li>
-        <li>Divayanshu Kumar</li>
-        <li>Sarves Suman</li>
+        <li>Harsh Kumar</li>
+        <li>Anu Kumari</li>
+        <li>Shailendra Kumar</li>
       </ul>
 
       <h2>Date of Event</h2>
-      <p>24 Apr 2025 (2:00 PM - 4:00 PM)</p>
+      <p>21 Apr 2025 (10:30 AM - 12:30 PM)</p>
       <h2>Venue</h2>
-      <p>Outdoor Arena</p>
-      <h2>Entry Fee: Rs. 50</h2>
+      <p>Volleyball Court</p>
+      <h2>Entry Fee: Rs. 150</h2>
       <a style="text-decoration: none; color: white;" href="../reg.html" target="_blank"><button>Register</button></a>
     </div>
   </div>
