--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <img src="./images/prajwalan.png" height="290" class="logo" />
         <p>
-          <i>WELCOME TO <b>SIT_TECH_KRITI </b> 2022-2023 ORGANISED BY GCOEA</i>
+          <i>WELCOME TO <b>SIT_TECH_KRITI </b> 2K25 ORGANISED BY SIT SITAMARHI</i>
           <br />
         </p>
         <div>
