--- a/spons.html
+++ b/spons.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SIT_TECH_KRITI</title>
+  <title>SPONSOR</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -68,7 +68,7 @@
 
       <img src="./images/prajwalan.png" height="290" class="logo" />
       <p>
-        <i>WELCOME TO <b>SIT_TECH_KRITI </b>ORGANISED BY SIT SITAMARHI</i>
+        <i>WELCOME TO <b>SIT_TECH_KRITI 2K25</b>ORGANISED BY SIT SITAMARHI</i>
         <br />
       </p>
       <div>
