--- a/spons.html
+++ b/spons.html
@@ -31,6 +31,7 @@
       <!--menu button content-->
       <ul>
         <li><a href="index.html">Home</a></li>
+          <li><a href="spons.html">Sponsors</a></li>
         <li><a href="event.html">Events</a></li>
         <li><a href="reg.html">Register</a></li>
       </ul>
